<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.capture.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.capture.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.capture.ui.settings.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_capture"
        android:name="com.example.capture.ui.capture.CaptureFragment"
        android:label="Capture"
        tools:layout="@layout/fragment_discover" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_local"-->
<!--        android:name="com.example.capture.ui.local.LocalFragment"-->
<!--        android:label="@string/title_notifications"-->
<!--        tools:layout="@layout/fragment_local" />-->


</navigation>